--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,5 @@
 /* 水平垂直居中 */
 .basic-layout {
-    @apply flex h-screen w-screen items-center place-content-center;
-    min-width: 800px;
+    @apply h-screen w-screen relative;
     font-family: "黑体";
 }
